tests/snapshots/yaml_suite_snapshots__yaml_suite_MYW6_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Block Scalar Strip
  from: NimYAML tests
  tags: literal scalar whitespace 1.3-err
  yaml: "|-\n ab\n␣\n␣\n...\n"
  tree: "+STR\n +DOC\n  =VAL |ab\n -DOC ...\n-STR\n"
  json: "\"ab\"\n"
  dump: "|-\n  ab\n...\n"
