tests/snapshots/yaml_suite_snapshots__yaml_suite_MYW6_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "|-\n  ab\n...\n"
  from: NimYAML tests
  json: "\"ab\"\n"
  name: Block Scalar Strip
  tags: literal scalar whitespace 1.3-err
  tree: "+STR\n +DOC\n  =VAL |ab\n -DOC ...\n-STR\n"
  yaml: "|-\n ab\n␣\n␣\n...\n"
