tests/snapshots/yaml_suite_snapshots__yaml_suite_MZX3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Non-Specific Tags on Scalars
  from: NimYAML tests
  tags: folded scalar
  yaml: "- plain\n- \"double quoted\"\n- 'single quoted'\n- >\n  block\n- plain again\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :plain\n   =VAL \"double quoted\n   =VAL 'single quoted\n   =VAL >block\\n\n   =VAL :plain again\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"plain\",\n  \"double quoted\",\n  \"single quoted\",\n  \"block\\n\",\n  \"plain again\"\n]\n"
