tests/snapshots/yaml_suite_snapshots__yaml_suite_N4JP_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Bad indentation in mapping
  tags: error mapping indent double
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :map\n   +MAP\n    =VAL :key1\n    =VAL \"quoted1\n   -MAP\n"
  yaml: "map:\n  key1: \"quoted1\"\n key2: \"bad indentation\"\n"
