tests/snapshots/yaml_suite_snapshots__yaml_suite_N782_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid document markers in flow style
  from: NimYAML tests
  tags: flow edge header footer error
  fail: true
  yaml: "[\n--- ,\n...\n]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n"
