tests/snapshots/yaml_suite_snapshots__yaml_suite_N782_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: NimYAML tests
  name: Invalid document markers in flow style
  tags: flow edge header footer error
  tree: "+STR\n +DOC\n  +SEQ []\n"
  yaml: "[\n--- ,\n...\n]\n"
